adjusted outer divs of showcase and landing pages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<!-- <router-outlet></router-outlet> -->
-<app-profile-layout></app-profile-layout>
+<router-outlet></router-outlet>
+<!-- <app-profile-layout></app-profile-layout> -->
 <!-- <app-community-card></app-community-card> -->
 <!-- <app-product-card></app-product-card> -->
 <!-- <app-skill-card></app-skill-card> -->
