--- a/src/app/mycommunities/community-showcase/community-showcase.component.css
+++ b/src/app/mycommunities/community-showcase/community-showcase.component.css
@@ -15,6 +15,9 @@
     align-items: center;
     padding-bottom: 15px;
 }
+.max-w{
+    width:100%;
+}
 .width-restrict-001{
     width: 100%;
     max-width: 450px;
@@ -65,7 +68,7 @@
 }
 
 .community-options{
-    width: 80vw;
+    width: 80%;
     margin-right: auto;
     padding-top: 15px;
     margin-left: auto;
@@ -78,11 +81,18 @@
 
 
 /* card css */
+.card-enclosure{
+    width:23%;
+    height:11.875rem;
+    margin-top:15px;
+}
 .cardbackground
 {
-    height: 190px;
-    border-radius: 20px;
-    width: 19vw;
+    max-height: 12.5625rem;
+    border-radius: 1.25rem;
+    max-width: 18.125rem;
+    height:100%;
+    width:100%;
     background-repeat: no-repeat; 
     background-size: cover; 
     background-position: center; 
