--- a/src/app/mycommunities/community-showcase/community-showcase.component.html
+++ b/src/app/mycommunities/community-showcase/community-showcase.component.html
@@ -24,44 +24,46 @@
         </div>
     </div>
     
-    <div class="community-options">
+    <div class="max-w">
+        <div class="community-options">
         
-                    <div class="cards-presentation">
-                        <div *ngFor="let group of communityData.groups.slice(0,8)">
-               
-                            <a routerLink="communitylanding">
-                               
-                                    <div class="mt-3">
-                                        <div class="card cardbackground" [style.background-image]="'linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0,0,0,0.6)), url('+group.cover+')'">
-                                          <div class="card-top">
-                                              <img class="img-fluid" src={{group.avatar}} alt="notfound">
-                                              <div class="card-name" class="ml-2">
-                                                  <span class="headerfontcolor">{{group.group_name}}</span>
-                                                  <small class="time-stamp">created {{group.time_text}}</small>
-                                              </div>
-                                          </div>
-                                          <div class="card-bottom">
-                                              <div style="position:relative; width:50%; height: 50px;">
-                                                    <img *ngFor="let image of group.members.slice(0,3); let i = index" class="img-fluid" style="height:30px;width:30px;border-radius: 27px;position:absolute;
-                                                    bottom: 10px;" [style.left]="(i*15)+'px'" src="{{image.avatar}}" alt="notfd">
-                                              </div>
-                                              <div>
-                                                  <span class="fa fa-list-alt metrics">
-                                                      <span class="ml-left-small">{{group.post_count}}</span>
-                                                    </span>
-                                                  <span class="ml-2 fa fa-comment-o metrics">
-                                                      <span class="ml-left-small">{{group.chat_count}}</span>
-                                                  </span>
-                                              </div>
-                                          </div>
-                                        </div>
-                                   </div>
-                                
-                            </a>
-                    </div>
-                    </div>
+            <div class="cards-presentation">
+                <div class="card-enclosure" *ngFor="let group of communityData.groups.slice(0,8)">
+       
+                    <a routerLink="communitylanding">
+                       
+                            
+                                <div class="card cardbackground" [style.background-image]="'linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0,0,0,0.6)), url('+group.cover+')'">
+                                  <div class="card-top">
+                                      <img class="img-fluid" src={{group.avatar}} alt="notfound">
+                                      <div class="card-name" class="ml-2">
+                                          <span class="headerfontcolor">{{group.group_name}}</span>
+                                          <small class="time-stamp">created {{group.time_text}}</small>
+                                      </div>
+                                  </div>
+                                  <div class="card-bottom">
+                                      <div style="position:relative; width:50%; height: 50px;">
+                                            <img *ngFor="let image of group.members.slice(0,3); let i = index" class="img-fluid" style="height:30px;width:30px;border-radius: 27px;position:absolute;
+                                            bottom: 10px;" [style.left]="(i*15)+'px'" src="{{image.avatar}}" alt="notfd">
+                                      </div>
+                                      <div>
+                                          <span class="fa fa-list-alt metrics">
+                                              <span class="ml-left-small">{{group.post_count}}</span>
+                                            </span>
+                                          <span class="ml-2 fa fa-comment-o metrics">
+                                              <span class="ml-left-small">{{group.chat_count}}</span>
+                                          </span>
+                                      </div>
+                                  </div>
+                                </div>
+                          
+                        
+                    </a>
+            </div>
+            </div>
 
 </div>
+    </div>
     
 
 </div>
