--- a/src/app/mycommunities/community-info/community-info.component.css
+++ b/src/app/mycommunities/community-info/community-info.component.css
@@ -38,8 +38,6 @@
 .small-quotes{
     font-size: 12px;
     display: inline-block;
-    margin-left: 17px;
-    margin-top: 7px;
 }
 .blues{
     color: #356083;
@@ -113,6 +111,42 @@
 }
 .guideline{
     margin-top: 10px;
+}
+.share-options-container{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+}
+.share-options{
+    width:100px;
+    justify-content:space-between;
+    display:flex;
+}
+.share-option{
+    padding:10px;
+    border-radius:50%;
+    border: 1px solid #DDDDDD;
+    height:fit-content;
+    width:fit-content;
+}
+.share-option img{
+    height:20px;
+    width:20px;
+}
+.small-quotes-enclosure{
+    display:inline-block;
+    margin-left: 17px;
+    margin-top: 7px;
+}
+.small-quotes-enclosure img{
+    height:12px;
+    width:12px;
+    margin-right:4px;
+    display:inline-block;
+}
+.trans img{
+    height:24px;
+    width:24px;
 }
 
 
